# roboptim-core-plugin-quadprog

./: CMakeLists.txt  README.md
include/roboptim/core/plugin/quadprog/: quadprog.hh
src/: CMakeLists.txt  quadprog.cc
tests/: CMakeLists.txt  quadprog.cpp  quadprogPlugin.cpp
